--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,7 +2,7 @@
 
     display: grid;
     place-items: center;
-    
+    width: 100%;
     margin-top: 20px;
     z-index: 9;
     background-color:#48537b;
